tweaked the flexbox model for the my work section and also tried to address the margin or padding placement issue of the navbar and footer

--- a/index.html
+++ b/index.html
@@ -37,30 +37,46 @@
             <h2>About Me</h2>
         </section>
         <section id="about-me" class="section-section">
-                <p>Although born in the USA/Canada, where my parents are from, I grew up in Central Asia, where I learned Uzbek, Russian, and an appreciation for those who are different. In 2017, graduated from Emory University in Atlanta, GA. My hobbies include working on my truck, guitar, chess, and cooking. I have several years of work experience, and currently studying to be a full-stack web developer at GA Tech. My professional interests include:</p>
+                <p>Although born in the USA/Canada, where my parents are from, I grew up in Central Asia, where I learned Uzbek, Russian, and an appreciation for those who are different. In 2017, graduated from Emory University in Atlanta, GA. My hobbies include working on my truck, guitar, chess, and cooking. I have several years of work experience, and currently studying to be a full-stack web developer at GA Tech.</p>
+                <br>
+                <p>My professional interests include:</p>
                 <ul>
                     <li>Operations</li>
                     <li>PeopleOps (HR)</li>
                     <li>Remote Work Readiness</li>
                     <li>Process and Onboarding Documentation</li>
+                    <li>Operational Security</li>
+                    <li>AP/AR Fiancial Streamlining</li>
                 </ul>
+                <br>
+                <p>My techncial proficiencies include:</p>
+                <ul>
+                    <li>Bookkeeping/QuickBooks</li>
+                    <li>Microsoft Office/Gsuite: Word, Excel, Powerpoint, Forms, Admin, etc etc</li>
+                    <li>HTML, CSS, JavaScript</li>
+                    <li>Coda/Notion/Clickup</li>
+                    <li>HRIS Software: Gusto, JustWorks, etc</li>
+                </ul>    
         </section>
 
         <section class="section-title">
             <h2>My Work</h2>
         </section>
         <section id="my-work" class="section-section"> 
-            <a class="content-card" id="first-project" href="https://github.com/jonathan-warkentine/horiseon-code-refactor-Jan2021">
-            <div>
-                <h3>Horiseon Code Refactor</h3>
-            </div>
-            </a>
-            <div class="content-card">
-                <h3>Project 2</h3>
-            </div>
-            <div class="content-card">
-                <h3>Project 3</h3>
-            </div>
+            <section id="section-section-section">
+                <a class="content-card" id="first-project" href="https://github.com/jonathan-warkentine/horiseon-code-refactor-Jan2021">
+                <div>
+                    <h3>Horiseon Code Refactor</h3>
+                </div>
+                </a>
+                <div class="content-card">
+                    <h3>Project 2</h3>
+                </div>
+                <div class="content-card">
+                    <h3>Project 3</h3>
+                </div>
+        
+            </section>
         </section>
     </main>
 
