fixed upper margin and excessive space in footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         </section>
         <section id="about-me" class="section-section">
                 <p>Although born in the USA/Canada, where my parents are from, I grew up in Central Asia, where I learned Uzbek, Russian, and an appreciation for those who are different. In 2017, graduated from Emory University in Atlanta, GA. My hobbies include working on my truck, guitar, chess, and cooking. I have several years of work experience, and currently studying to be a full-stack web developer at GA Tech.</p>
-                <br>
                 <p>My professional interests include:</p>
                 <ul>
                     <li>Operations</li>
@@ -47,13 +46,21 @@
                     <li>Process and Onboarding Documentation</li>
                     <li>Operational Security</li>
                     <li>AP/AR Fiancial Streamlining</li>
+                    <li>Dataset cleaning & analysis</li>
                 </ul>
-                <br>
                 <p>My techncial proficiencies include:</p>
                 <ul>
                     <li>Bookkeeping/QuickBooks</li>
-                    <li>Microsoft Office/Gsuite: Word, Excel, Powerpoint, Forms, Admin, etc etc</li>
-                    <li>HTML, CSS, JavaScript</li>
+                    <li>Microsoft Office/Gsuite:
+                        <ul>
+                            <li>Word/Google Docs</li>
+                            <li>Excel/Google Sheets</li>
+                            <li>Powerpoint/Google Slides</li>
+                            <li>Google Forms</li>
+                            <li>Google Admin</li>
+                        </ul>
+                    </li>
+                    <li>Programming: HTML, CSS, JavaScript, R</li>
                     <li>Coda/Notion/Clickup</li>
                     <li>HRIS Software: Gusto, JustWorks, etc</li>
                 </ul>    
