margin and padding corrections, background color for project cards

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <h2>About Me</h2>
         </section>
         <section id="about-me" class="section-section">
+            <article>
                 <p>Although born in the USA/Canada, where my parents are from, I grew up in Central Asia, where I learned Uzbek, Russian, and an appreciation for those who are different. In 2017, graduated from Emory University in Atlanta, GA. My hobbies include working on my truck, guitar, chess, and cooking. I have several years of work experience, and currently studying to be a full-stack web developer at GA Tech.</p>
                 <p>My professional interests include:</p>
                 <ul>
@@ -63,7 +64,8 @@
                     <li>Programming: HTML, CSS, JavaScript, R</li>
                     <li>Coda/Notion/Clickup</li>
                     <li>HRIS Software: Gusto, JustWorks, etc</li>
-                </ul>    
+                </ul>
+            </article>        
         </section>
 
         <section class="section-title">
