J. Warkentine to Jonathan Warkentine

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     
-    <title>J. Warkentine</title>
+    <title>Jonathan Warkentine</title>
     <link rel="icon" href="./assets/images/Favicon.png" filetype="image/png">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/CSS/style.css">
