trying to fix bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Jonathan Warkentine</title>
     <link rel="icon" href="./assets/images/Favicon.png" filetype="image/png">
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/CSS/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
