updating projects + background images

--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
             </div>
 
             <div id="projects">
+                <a class="link-wrap" href="https://github.com/jonathan-warkentine/TRAKS">
+                    <div id="traks" class="project-card"> 
+                        <h3>TRAKS - MySQL Database CLI</h3>
+                        <div>
+                            <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/TRAKS">[ Repo Link ]</a></h4>
+                        </div>
+                    </div>
+                </a>
+
+                <a class="link-wrap" href="https://tech-blog-spot.herokuapp.com/">
+                    <div class="project-card"> 
+                        <h3>Tech Blog Spot</h3>
+                        <div>
+                            <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/Tech-Blog-Spot">[ Repo Link ]</a></h4>
+                        </div>
+                    </div>
+                </a>
+
                 <a class="link-wrap" href="https://jonathan-warkentine.github.io/weather-app/">
                     <div class="project-card"> 
                         <h3>Weather App</h3>
