background images in place

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </a>
 
                 <a class="link-wrap" href="https://tech-blog-spot.herokuapp.com/">
-                    <div class="project-card"> 
+                    <div id="techblog" class="project-card"> 
                         <h3>Tech Blog Spot</h3>
                         <div>
                             <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/Tech-Blog-Spot">[ Repo Link ]</a></h4>
@@ -109,7 +109,7 @@
                 </a>
 
                 <a class="link-wrap" href="https://jonathan-warkentine.github.io/weather-app/">
-                    <div class="project-card"> 
+                    <div id="weather" class="project-card"> 
                         <h3>Weather App</h3>
                         <div>
                             <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/weather-app">[ Repo Link ]</a></h4>
@@ -118,7 +118,7 @@
                 </a>
 
                 <a class="link-wrap" href="https://jonathan-warkentine.github.io/Pokedex/">
-                    <div class="project-card"> 
+                    <div id="pokedex" class="project-card"> 
                         <h3>Pokédex</h3>
                         <div>
                             <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/Pokedex">[ Repo Link ]</a></h4>
@@ -127,7 +127,7 @@
                 </a>
 
                 <a class="link-wrap" href="https://jonathan-warkentine.github.io/password-generator/">
-                    <div class="project-card"> 
+                    <div id="password" class="project-card"> 
                         <h3>Password Generator</h3>
                         <div>
                             <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/password-generator">[ Repo Link ]</a></h4>
