basic js nav functionality in place

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </h1>
         <nav>
                 <p>[</p>
-                <a href="#top">About Me</a>
+                <a onclick="hideWork();">About Me</a>
                 <p>|</p>
-                <a href="#my-work">My Work</a>
+                <a onclick="hideAbout();">My Work</a>
                 <p>|</p>
                 <a href="./assets/pdfs/Warkentine_LinkedIn.pdf">Resume</a>
                 <p>]</p>
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="about">
             <div class="section-title" id="about-me-title">
                 <h2>About Me</h2>
             </div>
@@ -84,7 +84,7 @@
             
         </section>
         
-        <section>
+        <section id="work">
             <div class="section-title">
                 <h2>My Work</h2>
             </div>
