trimmed resume pdf, tweaking project pics

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </h1>
         <nav>
                 <p>[</p>
-                <a onclick="hideWork();">About Me</a>
+                <a href="#about" onclick="hideWork();">About Me</a>
                 <p>|</p>
-                <a onclick="hideAbout();">My Work</a>
+                <a href="#work" onclick="hideAbout();">My Work</a>
                 <p>|</p>
                 <a href="./assets/pdfs/Warkentine_LinkedIn.pdf">Resume</a>
                 <p>]</p>
