sticky section titles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <main>
         <section id="about">
             <div class="section-title" id="about-me-title">
-                <h2>About Me</h2>
+                <div class="inner-title">
+                    <h2>About Me</h2>
+                </div>
             </div>
 
             <div id="about-me" class="section">
@@ -86,7 +88,9 @@
         
         <section id="work">
             <div class="section-title">
-                <h2>My Work</h2>
+                <div class="inner-title">
+                    <h2>My Work</h2>
+                </div>
             </div>
 
             <div id="projects">
