added pronunciation, chess link, formatting fixes

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
 <body>
     <header>
-        <h1 id="large-page-title">
-            Jonathan Warkentine:
-        </h1>
+        <div id="large-page-title">
+            <h1>Warkentine</h1>  
+            <h2>['wawr-kən-tēn]</h2>
+        </div>
         <h1 id="small-page-title">
             J. Warkentine
         </h1>
@@ -28,7 +29,7 @@
                 <p>|</p>
                 <a href="#work" onclick="hideAbout();">My Work</a>
                 <p>|</p>
-                <a href="./assets/pdfs/Warkentine_LinkedIn.pdf">Resume</a>
+                <a href="./assets/pdfs/Warkentine_Resume.pdf">Resume</a>
                 <p>]</p>
 
         </nav>
@@ -49,7 +50,7 @@
                     <br>
                     <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
                     <br>
-                    <p>My hobbies include working on my truck, guitar, chess, and cooking.</p>
+                    <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
                     <br>
                     <p>I have several years of work experience, and am currently studying to be a full-stack web developer at GA Tech.</p>
                     <br>
