--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <body>
     <header>
         <div id="large-page-title">
-            <h1>Warkentine</h1>  
-            <h2>['wawr-kən-tēn]</h2>
+            <h1>Jonathan Warkentine</h1>  
         </div>
         <h1 id="small-page-title">
             J. Warkentine
@@ -47,51 +46,89 @@
             </div>
 
             <div id="about-me" class="section">
-                <article id="about-me-content">
-                    <br>
-                    <p>I'm Canadian-American, but I grew up in Central Asia.</p>
-                    <br>
-                    <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
-                    <br>
-                    <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
-                    <br>
-                    <p>I have several years of work experience, and am currently studying to be a full-stack web developer at GA Tech.</p>
-                    <br>
-                    <p>My professional interests include:</p>
-                    <ul>
-                        <li>Operations</li>
-                        <li>PeopleOps (HR)</li>
-                        <li>Remote Work Readiness</li>
-                        <li>Process and Onboarding Documentation</li>
-                        <li>Operational Security</li>
-                        <li>AP/AR Fiancial Streamlining</li>
-                        <li>Dataset cleaning & analysis</li>
-                    </ul>
-                    <br>
-                    <p>My techncial proficiencies include:</p>
-                    <ul>
-                        <li>Bookkeeping/QuickBooks</li>
-                        <li>Microsoft Office/Gsuite:
-                            <ul>
-                                <li>Word/Google Docs</li>
-                                <li>Excel/Google Sheets</li>
-                                <li>Powerpoint/Google Slides</li>
-                                <li>Google Forms</li>
-                                <li>Google Admin</li>
-                            </ul>
-                        </li>
-                        <li>Programming: HTML, CSS, JavaScript, R</li>
-                        <li>Coda/Notion/Clickup</li>
-                        <li>HRIS Software: Gusto, JustWorks, etc</li>
-                    </ul>
-                    <br>
+                <article>
+                    <div class="about-me-sub">
+                        <h3>[ Bio: ]</h3> 
+                        <br>
+                        <p>I'm Canadian-American, but I grew up in Central Asia.</p>
+                        <br>
+                        <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
+                        <br>
+                        <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
+                    </div>
+                    <div class="about-me-sub">
+                        <h3>[ Work Experience: ]</h3> 
+                        <br>
+                        <p>In addition to full-stack web development certification from Georgia Tech, I have significant work experience in Operations.</p>
+                        <br>
+                        <p>My professional interests include:</p>
+                                <ul>
+                                    <li>Web Development (Front- and Back-end)</li>
+                                    <li>Operations</li>
+                                    <li>PeopleOps (HR)</li>
+                                    <li>Remote Work Readiness</li>
+                                    <li>Process and Onboarding Documentation</li>
+                                    <li>Operational Security</li>
+                                    <li>AP/AR Fiancial Streamlining</li>
+                                </ul>                                
+                    </div>
+                    <div class="about-me-sub">
+                        <h3>[ Skills: ]</h3>
+                        <br>
+                        <p>My techncial proficiencies include:</p>
+                                <ul>
+                                    <li>Client-side Web Development
+                                        <ul>
+                                            <li>HTML5</li>
+                                            <li>CSS3</li>
+                                            <li>JavaScript</li> 
+                                            <li>Query</li>
+                                            <li>Bootstrap</li>
+                                            <li>Handlebars.js</li>
+                                        </ul>
+                                    </li>
+                                    <br>
+                                    <li>Server-side Web Development
+                                        <ul>
+                                            <li>Node.js</li>
+                                            <li>Express.js & REST APIs</li>
+                                            <li>JavaScript</li> 
+                                            <li>MySQL</li>
+                                            <li>MongoDB</li>
+                                            <li>Sequelize SQL<>Nodejs ORMs</li>
+                                            <li>Handlebars.js</li>
+                                        </ul>
+                                    </li>
+                                    <br>
+                                    <li>Microsoft Office/Gsuite:
+                                        <ul>
+                                            <li>Word/Google Docs</li>
+                                            <li>Excel/Google Sheets</li>
+                                            <li>Powerpoint/Google Slides</li>
+                                            <li>Google Admin</li>
+                                        </ul>
+                                    </li>
+                                    <br>
+                                    <li>Financial Operations:
+                                        <ul>
+                                            <li>AP/AR Management</li>
+                                            <li>Payroll</li>
+                                            <li>Banking & Crypto Asset Management </li>
+                                            <li>Bookkeeping (QuickBooks)</li>
+                                        </ul>
+                                    </li>
+                                    <br>
+                                    <li>Coda/Notion/Clickup</li>
+                                    <li>HRIS Software: Gusto, JustWorks, etc</li>
+                                </ul>
+                    </div>
                 </article>        
             </div>
             
         </section>
         
         <section id="work">
-            <div class="section-title">
+            <div id="work-title" class="section-title">
                 <div class="inner-title">
                     <h2>My Work</h2>
                 </div>
@@ -103,6 +140,15 @@
                         <h3>TRAKS - MySQL Database CLI</h3>
                         <div>
                             <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/TRAKS">[ Repo Link ]</a></h4>
+                        </div>
+                    </div>
+                </a>
+
+                <a class="link-wrap" href="https://floating-shore-96827.herokuapp.com/">
+                    <div id="snodes" class="project-card"> 
+                        <h3>Snodes</h3>
+                        <div>
+                            <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/snode">[ Repo Link ]</a></h4>
                         </div>
                     </div>
                 </a>
