--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="about-me-sub">
                         <h3>[ Work Experience: ]</h3> 
                         <br>
-                        <p>In addition to full-stack web development certification from Georgia Tech, I have significant work experience in Operations.</p>
+                        <p>In addition to full-stack web development certification from Georgia Tech, I have significant work experience in start-up operations.</p>
                         <br>
                         <p>My professional interests include:</p>
                                 <ul>
