--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                             <li>HTML5</li>
                                             <li>CSS3</li>
                                             <li>JavaScript</li> 
-                                            <li>Query</li>
+                                            <li>JQuery</li>
                                             <li>Bootstrap</li>
                                             <li>Handlebars.js</li>
                                         </ul>
