--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                                             <li>JavaScript</li> 
                                             <li>Query</li>
                                             <li>Bootstrap</li>
+                                            <li>React</li>
                                             <li>Handlebars.js</li>
                                         </ul>
                                     </li>
@@ -96,7 +97,10 @@
                                             <li>MySQL</li>
                                             <li>MongoDB</li>
                                             <li>Sequelize SQL<>Nodejs ORMs</li>
-                                            <li>Handlebars.js</li>
+                                            <li>GraphQL</li>
+                                            <li>React, Handlebars.js</li>
+                                            <li>Webpack</li>
+                                            <li>Progressive Web Applications</li>
                                         </ul>
                                     </li>
                                     <br>
