updated with work experience, added some more proficiency bullet points

--- a/index.html
+++ b/index.html
@@ -59,18 +59,7 @@
                     <div class="about-me-sub">
                         <h3>[ Work Experience: ]</h3> 
                         <br>
-                        <p>In addition to full-stack web development certification from Georgia Tech, I have significant work experience in start-up operations.</p>
-                        <br>
-                        <p>My professional interests include:</p>
-                                <ul>
-                                    <li>Web Development (Front- and Back-end)</li>
-                                    <li>Operations</li>
-                                    <li>PeopleOps (HR)</li>
-                                    <li>Remote Work Readiness</li>
-                                    <li>Process and Onboarding Documentation</li>
-                                    <li>Operational Security</li>
-                                    <li>AP/AR Fiancial Streamlining</li>
-                                </ul>                                
+                        <p>Full stack web developer with experience in JavaScript (Node, React), Java (Spring Framework), PhP, SQL and NoSQL databases. Currently employed as a development engineer at Sinclair Digital. Exposure and proficiency in both Object-Oriented and Functional programming paradigms (Rambda.js).</p>                          
                     </div>
                     <div class="about-me-sub">
                         <h3>[ Skills: ]</h3>
@@ -79,28 +68,20 @@
                                 <ul>
                                     <li>Client-side Web Development
                                         <ul>
-                                            <li>HTML5</li>
-                                            <li>CSS3</li>
-                                            <li>JavaScript</li> 
-                                            <li>JQuery</li>
-                                            <li>Bootstrap</li>
-                                            <li>React</li>
-                                            <li>Handlebars.js</li>
+                                            <li>HTML5, CSS3, Boostrap</li>
+                                            <li>JavaScript, JQuery</li> 
+                                            <li>React, Handlebars.js</li>
+                                            <li>PWAs (Progressive Web Applications), Webpack</li>
                                         </ul>
                                     </li>
                                     <br>
                                     <li>Server-side Web Development
                                         <ul>
-                                            <li>Node.js</li>
-                                            <li>Express.js & REST APIs</li>
-                                            <li>JavaScript</li> 
-                                            <li>MySQL</li>
-                                            <li>MongoDB</li>
-                                            <li>Sequelize SQL<>Nodejs ORMs</li>
-                                            <li>GraphQL</li>
-                                            <li>React, Handlebars.js</li>
-                                            <li>Webpack</li>
-                                            <li>Progressive Web Applications</li>
+                                            <li>JavaScript (Node.js, Express.js, Rambda.js) </li>
+                                            <li>Java (Spring Boot/Cloud Framework)</li>
+                                            <li>PhP</li>
+                                            <li>Databases (MySQL, MongoDB, GraphQL)</li>
+                                            <li>ORMs (Sequelize SQL<>Nodejs ORM)</li>
                                         </ul>
                                     </li>
                                     <br>
