--- a/index.html
+++ b/index.html
@@ -50,19 +50,31 @@
                     <div class="about-me-sub">
                         <h3>[ Bio: ]</h3> 
                         <br>
-                        <br>
                         <p>I'm Canadian-American, but I grew up in Central Asia.</p>
                         <br>
-                        <br>
                         <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
-                        <br>
                         <br>
                         <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
                     </div>
                     <div class="about-me-sub">
                         <h3>[ Work Experience: ]</h3> 
                         <br>
-                        <p>Full stack web developer with experience in JavaScript (Node, React), Java (Spring Framework), PhP, SQL and NoSQL databases. Currently employed as a development engineer at Sinclair Digital. Exposure and proficiency in both Object-Oriented and Functional programming paradigms (Rambda.js).</p>                          
+                        <p>Full stack web developer with experience in JavaScript (Node, React), Java (Spring Framework), PhP, SQL and NoSQL databases. AWS Certified Solutions Architect. Currently employed as a development engineer at Sinclair Digital. Proficiency in both Object-Oriented and Functional programming paradigms (Rambda.js).
+                        </p>
+                        <br>
+                        <p>
+                            Architected and built out custom Java Spring Cloud API Gateway
+○ Auth0/OAuth2 authorization configuration
+○ Architected JUnit test suite
+○ Oversaw Kubernetes deployment
+● Spearheaded org’s monolith to microservice architecture transition
+○ Pioneered Hashicorp Consul service discovery catalog
+○ Automated service registration with Terraform
+● General Development Duties
+○ Meaningful contributions to code reviews
+○ Participation in team sprint/quarterly planning
+○ Company React plugin hackathon winner
+                        </p>                         
                     </div>
                     <div class="about-me-sub">
                         <h3>[ Skills: ]</h3>
@@ -83,6 +95,13 @@
                                             <li>JavaScript (Node.js, Express.js, Rambda.js) </li>
                                             <li>Java (Spring Boot/Cloud Framework)</li>
                                             <li>PhP</li>
+                                            <li>AWS Certified Solutions Architect</li>
+                                            <li>CI/CD Pipelines (GitLab)</li>
+                                            <li>Terraform</li>
+                                            <li>Docker</li>
+                                            <li>Kubernetes</li>
+                                            <li>Monitoring</li>
+                                            <li>Testing</li>
                                             <li>Databases (MySQL, MongoDB, GraphQL)</li>
                                             <li>ORMs (Sequelize SQL<>Nodejs ORM)</li>
                                         </ul>
