updated experience section, moved "about me" to the bottom of the page"

--- a/index.html
+++ b/index.html
@@ -48,33 +48,19 @@
             <div id="about-me" class="section">
                 <article>
                     <div class="about-me-sub">
-                        <h3>[ Bio: ]</h3> 
+                        <h3>[ Experience: ]</h3> 
                         <br>
-                        <p>I'm Canadian-American, but I grew up in Central Asia.</p>
+                        <p>Full stack web developer. AWS Certified Solutions Architect. Frontend, backend, and cloud infrastructure.</p>
                         <br>
-                        <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
-                        <br>
-                        <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
-                    </div>
-                    <div class="about-me-sub">
-                        <h3>[ Work Experience: ]</h3> 
-                        <br>
-                        <p>Full stack web developer with experience in JavaScript (Node, React), Java (Spring Framework), PhP, SQL and NoSQL databases. AWS Certified Solutions Architect. Currently employed as a development engineer at Sinclair Digital. Proficiency in both Object-Oriented and Functional programming paradigms (Rambda.js).
-                        </p>
-                        <br>
-                        <p>
-                            Architected and built out custom Java Spring Cloud API Gateway
-○ Auth0/OAuth2 authorization configuration
-○ Architected JUnit test suite
-○ Oversaw Kubernetes deployment
-● Spearheaded org’s monolith to microservice architecture transition
-○ Pioneered Hashicorp Consul service discovery catalog
-○ Automated service registration with Terraform
-● General Development Duties
-○ Meaningful contributions to code reviews
-○ Participation in team sprint/quarterly planning
-○ Company React plugin hackathon winner
-                        </p>                         
+                        <p>Currently Development Engineer at Sinclair Digital</p>
+                        <ul>
+                            <li>Co-architected and built custom Java Spring Cloud API Gateway, from source code to Terraform + Kubernetes cloud deployment.</li>
+                            <li>Helping spearhead our orgs transition from monolith to microservice architecture</li>
+                            <li>Pioneered our Sinclair's adoption of Hashicorp Consul service discovery catalog, automating service registration with Terraform</li>
+                            <li>Auth0/OAuth2 authorization configuration</li>
+                            <li>Architected and built JUnit Test Suites</li>
+                            <li>Org-wide React Plugin Hackathon Winner</li>
+                        </ul>
                     </div>
                     <div class="about-me-sub">
                         <h3>[ Skills: ]</h3>
@@ -128,6 +114,13 @@
                                     <li>Coda/Notion/Clickup</li>
                                     <li>HRIS Software: Gusto, JustWorks, etc</li>
                                 </ul>
+                    </div>
+                    <div class="about-me-sub">
+                        <h3>[ Who Am I?: ]</h3> 
+                        <br>
+                        <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
+                        <br>
+                        <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
                     </div>
                 </article>        
             </div>
